<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/maybe">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textColor="#ffb300"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
    />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:srcCompat="@drawable/leagueicon"
        android:id="@+id/imageView"
        android:padding="40dp" android:layout_weight="0.78"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

    <Button
        android:text="@string/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player1_button"
        android:layout_margin="10dp"
    />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:id="@+id/player2_button"
        android:layout_margin="10dp"
    />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore_title"
        android:id="@+id/highscores_button"/>

    </LinearLayout>


</LinearLayout>


