<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_score_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gibson.liam.leaguequiz.ScoreScreenActivity">

    <TextView
        android:text="@string/score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:textSize="50sp"/>
    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/totalScore"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="120sp"/>
    <Button
        android:text="@string/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:id="@+id/menu_button"/>
    <Button
        android:text="@string/highscore_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
        android:id="@+id/highscores_button"/>
</RelativeLayout>
