<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="gibson.liam.leaguequiz.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:padding="10dp"
    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
    >

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/name_box"
        android:id="@+id/user_name"
        android:background="@drawable/border"
        android:layout_marginRight="10dp"
    />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_button"
            android:id="@+id/enter_button"
        />

    </LinearLayout>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/checkbox_explanation"
              android:layout_marginBottom="5dp"
              android:layout_marginRight="10dp"
              android:layout_marginLeft="10dp"
    />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@drawable/border"
                  android:layout_margin="5dp"
    >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        >
            <TextView
                android:text="Ashe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_text1"
                android:layout_weight="3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox1"
                android:layout_weight="1"
                android:checked="false"
            />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Diana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_text2"
                android:layout_weight="3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox2"
                android:checked="false"
                android:layout_weight="1.02"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Master Yi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_text3"
                android:layout_weight="2.64"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox3"
                android:checked="false"
                android:layout_weight="1.02"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Vi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_text4"
                android:layout_weight="3.38"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox4"
                android:checked="false"
                android:layout_weight="1.04"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Azir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_text5"
                android:layout_weight="3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox5"
                android:checked="false"
                android:layout_weight="0.97"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Graves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_text6"
                android:layout_weight="3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox6"
                android:checked="false"
                android:layout_weight="1.06"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Kayle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_text7"
                android:layout_weight="3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox7"
                android:checked="false"
                android:layout_weight="1.03"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Darius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_text8"
                android:layout_weight="3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox8"
                android:checked="false"
                android:layout_weight="1.05"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Nunu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_text9"
                android:layout_weight="3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox9"
                android:checked="false"
                android:layout_weight="1.02"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Braum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_text10"
                android:layout_weight="3"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox10"
                android:checked="false"
                android:layout_weight="1.07"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
